# swift-asn1

./: .gitignore  .spi.yml  .swift-format  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  NOTICE.txt  Package.swift  README.md  SECURITY.md  SECURITY_HARDENING_REPORT.md
.github/workflows/: main.yml  pull_request.yml  pull_request_label.yml  scheduled.yml
Benchmarks/: Package.swift
Benchmarks/Benchmarks/SwiftASN1Benchmark/: Benchmarks.swift  CACertificates.swift  ParseWebPKI.swift
Benchmarks/Thresholds/5.10/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument_.p90.json
Benchmarks/Thresholds/5.7/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_PEM_to_PEMDocument.p90.json  SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument_.p90.json
Benchmarks/Thresholds/5.8/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_PEM_to_PEMDocument.p90.json  SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument_.p90.json
Benchmarks/Thresholds/5.9/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_PEM_to_PEMDocument.p90.json  SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument_.p90.json
Benchmarks/Thresholds/6.3/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_PEM_to_PEMDocument.p90.json  SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument_.p90.json
Benchmarks/Thresholds/main/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_PEM_to_PEMDocument.p90.json
Benchmarks/Thresholds/nightly-main/: SwiftASN1Benchmark.Parse_WebPKI_Roots_from_multi_PEM_to_PEMDocument.p90.json
Sources/: CMakeLists.txt
Sources/SwiftASN1/: ASN1.swift  BER.swift  CMakeLists.txt  DER.swift  ECDSASignature.swift  Errors.swift  PEMDocument.swift  PKCS8PrivateKey.swift  SEC1PrivateKey.swift  SubjectPublicKeyInfo.swift
Sources/SwiftASN1/Basic ASN1 Types/: ASN1Any.swift  ASN1BitString.swift  ASN1Boolean.swift  ASN1Identifier.swift  ASN1Integer.swift  ASN1Null.swift  ASN1OctetString.swift  ASN1Strings.swift  ArraySliceBigint.swift  UTCTime.swift  (+4 more)
Tests/SwiftASN1Tests/: ASN1StringTests.swift  ASN1Tests.swift  DepthLimitTest.swift  GeneralizedTimeTests.swift  OverflowTruncationTest.swift  PanicSafetyTest.swift  ResourceExhaustionTest.swift  UTCTimeTests.swift  excessive_depth.ber  recursive.asn
cmake/modules/: CMakeLists.txt  SwiftASN1Config.cmake.in  SwiftSupport.cmake
dev/: update-benchmark-thresholds.sh
docker/: Dockerfile  docker-compose.2204.510.yaml  docker-compose.2204.57.yaml  docker-compose.2204.58.yaml  docker-compose.2204.59.yaml  docker-compose.2204.60.yaml  docker-compose.2204.main.yaml  docker-compose.yaml  ssh-keys.sh
scripts/: check-cmake-lists.sh  check_no_api_breakages.sh  generate_contributors_list.sh  run-swift-format.sh  soundness.sh  update_cmakelists.sh
(+8 files in other folders)
